Improve the docs site

--- a/site/index.html
+++ b/site/index.html
@@ -793,6 +793,10 @@ cd your-repository</code></pre>
     </div>
      
 
+<script src="assets/extra.js"></script>
+
+     
+
 <script src="search/main.js"></script>
 
 
