--- a/site/preprocessing/index.html
+++ b/site/preprocessing/index.html
@@ -931,6 +931,10 @@ converting it to PyTorch tensors.</p>
     </div>
      
 
+<script src="../assets/extra.js"></script>
+
+     
+
 <script src="../search/main.js"></script>
 
 
